--- a/receptek.html
+++ b/receptek.html
@@ -1,8 +1,42 @@
-<header class="hero hero-recipes">
-    <div class="container text-center text-white">
-        <div class="overlay">
-            <h1>Receptek</h1>
-            <p>Fedezd fel a legjobb házias ételeket!</p>
-        </div>
-    </div>
-</header>
+<!DOCTYPE html>
+<html lang="hu">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Receptvilág</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">Receptvilág</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Főoldal</a></li>
+                        <li class="nav-item"><a class="nav-link" href="receptek.html">Receptek</a></li>
+                        <li class="nav-item"><a class="nav-link" href="velemenyek.html">Vélemények</a></li>
+                        <li class="nav-item"><a class="nav-link" href="kapcsolat.html">Kapcsolat</a></li>
+                        <li class="nav-item"><a class="nav-link" href="ujrecept.html">Küldd el az ötleted!</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <header>
+
+        </header>
+
+        <footer class="text-center text-white bg-dark p-3 mt-5">
+            <p>&copy; 2025 Receptvilág - Minden jog fenntartva</p>
+        </footer>
+
+        <script src="navbar.js"></script>
+        <script src="script.js"></script>
+    </body>
+
+    </html>
